Fix Travis CI lifecycle.